--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "cli-number-guessing",
-  "version": "1.0.0",
+  "name": "hina-yaseeen-cli-number-guessing",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "piblishConfig": {
+    "access": "public"
+  },
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
